partials include + date module create + about page

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
-    <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="/css/background.css">
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
-
-<body>
+<%- include("header") -%>
     <div class="context">
         <div class="box" id="heading">
             <h1>
@@ -35,6 +22,11 @@
                     </form>
         </div>
     </div>
+
+
+
+
+
     <!-- FOR THE ANIMATED BACGROUND -->
     <div class="area">
         <ul class="circles">
@@ -56,8 +48,4 @@
         </ul>
     </div>
 
-
-
-</body>
-
-</html>
+    <%- include("footer") -%>
