--- a/public/css/background.css
+++ b/public/css/background.css
@@ -21,7 +21,7 @@ body {
 .context h1 {
     text-align: center;
     color: #fff;
-    font-size: 50px;
+    font-size: 45px;
 }
 
 
@@ -167,6 +167,12 @@ body {
     height: 15px;
     animation-delay: 2s;
     animation-duration: 35s;
+}
+
+footer {
+    position: fixed;
+    bottom: 9px;
+    left: 584px;
 }
 
 
