--- a/views/list.ejs
+++ b/views/list.ejs
@@ -2,23 +2,26 @@
     <div class="context">
         <div class="box" id="heading">
             <h1>
-                <%= kindOfDay %>
+                <%= list_title %>
             </h1>
         </div>
 
         <div class="box">
-            <% for(var i=0; i<newListItems.length;i++){ %>
-                <div class="item">
-                    <input type="checkbox">
-                    <p>
-                        <%= newListItems[i] %>
-                    </p>
-                </div>
-                <% } %>
+
+            <% newListItems.forEach(function(item){ %>
+                <form action="/delete" method="post">
+                    <div class="item">
+                        <input type="checkbox" onChange="this.form.submit()" name="check_box" value="<%= item._id %>">
+                        <p>
+                            <%= item.name %>
+                        </p>
+                    </div>
+                </form>
+                <% }); %>
 
                     <form class="item" action="/" method="post">
                         <input type="text" name="next_task" placeholder="New Item" autocomplete="off">
-                        <button type="submit" name="button">+</button>
+                        <button type="submit" name="button" value="<%= list_title %>">+</button>
                     </form>
         </div>
     </div>
