--- a/views/list.ejs
+++ b/views/list.ejs
@@ -16,6 +16,7 @@
                             <%= item.name %>
                         </p>
                     </div>
+                    <input type="hidden" name="hidden" value="<%= list_title %>">
                 </form>
                 <% }); %>
 
